Fix z-index for CustomMenuHeader toggle button
[3.1]

Please cherry-pick to master

--- a/resources/stylesheets/component/common/custommenuheader.less
+++ b/resources/stylesheets/component/common/custommenuheader.less
@@ -1,7 +1,7 @@
 /* open */
 .calumma-toggle-button.bs-custom-menu-header-button {
 	position: fixed;
-	z-index: 101;
+	z-index: 25;
 	cursor: pointer;
 	color: @custom-menu-header-color;
 	background-color: @custom-menu-header-bg-color;
